--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,13 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+
+.target::after
+{
+    content: "";
+    display: block;
+    height: 1.5em;
+    width: 100%;
+    background: #F4F4F4;
+}
